--- a/src/assets/sass/base/animations.scss
+++ b/src/assets/sass/base/animations.scss
@@ -15,3 +15,12 @@
       transform:rotate(360deg);
   }
 }
+
+@keyframes bring-down {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
