--- a/src/assets/sass/pages/_contact.scss
+++ b/src/assets/sass/pages/_contact.scss
@@ -179,3 +179,50 @@
         transform: translateX(-30px);
     }
 }
+
+.dialogue {
+    position: fixed;
+    max-width: 500px;
+    background-color: var(--color-dreamsicle);
+
+    top: 80px;
+    left: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 13px 2px #b7b0b0;
+    z-index: 99;
+
+    animation-name: bring-down;
+    animation-duration: 500ms;
+    animation-timing-function: linear;
+
+    &-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    &__close {
+        color: var(--color-fresh-watermelon);
+        font-size: 15px;
+
+        &:hover {
+            color: var(--color-almost-famous);
+        }
+    }
+
+    &__title {
+        font-size: 18px;
+        font-family: var(--font-title);
+        color: var(--color-fresh-watermelon);
+        font-weight: 600;
+    }
+
+    &__text {
+        margin-top: 15px;
+        font-size: 18px;
+    }
+}
