--- a/src/assets/sass/pages/_index.scss
+++ b/src/assets/sass/pages/_index.scss
@@ -28,7 +28,7 @@
         font-family: var(--font-title);
         font-size: var(--font-medium);
         padding: 15px;
-
+        
         position: relative;
         top: 0;
         left: 0;
@@ -42,7 +42,10 @@
             margin-bottom: 15px;
             margin-top: 0;
             display: inline-block;
-
+            clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+            transform: translateY(100px);
+            opacity: 0;
+ 
             @include respond-to(large) {
                 display: block;
             }
@@ -77,11 +80,15 @@
     }
 
     &__cta {
+        font-size: 13px;
+        text-align: center;
+        font-weight: 600;
+        font-family: var(--font-primary);
+        text-decoration: none;
         background-color: var(--color-julep-green);
         border: none;
         border-radius: 10px;
         color: var(--color-almost-famous);
-        font-weight: bold;
         display: block;
         margin-top: 30px;
         width: 150px;
@@ -135,8 +142,9 @@
         width: 400px;
         position: relative;
         right: 35px;
-        top: 100px;
-
+        transform: translateY(200px) ;
+        opacity: 0;
+        
         box-shadow: -6px 6px 8px 1px rgba(0, 0, 0, .5);
         
         & img {
