--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -7,7 +7,9 @@
     margin-right: 10px;
     position: relative;
     transition: .3s;
+    
     opacity: 0;
+    transform: translateX(-50px);
 
     & i {
         transition: .3s;
