--- a/src/assets/sass/pages/_about.scss
+++ b/src/assets/sass/pages/_about.scss
@@ -19,6 +19,11 @@
     @include respond-to(medium) {
         font-size: 24px;
     }
+
+    & h1 {
+        transform: translateX(-200px);
+        opacity: 0;
+    }
 }
 
 .about-caption {
@@ -32,7 +37,9 @@
         flex: 0 80%;
         order: 2;
         position: relative;
-        top: -200px;
+        
+        transform: translateY(200px);
+        opacity: 0;;
 
         & img {
             display: block;
@@ -62,6 +69,10 @@
         top: -100px;
         padding: 20px;
         z-index: -1;
+
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        opacity: 0;
+        transform: translateY(-100px);
 
         & h2 {
             color: var(--color-highlight);
@@ -106,6 +117,10 @@
     align-items: center;
     margin-top: 200px;
     padding: 50px 15px;
+
+    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+    opacity: 0;
+    transform: translateX(-200px);
 
     &__title {
         flex: 0 0 100%;
@@ -200,6 +215,10 @@
         line-height: 1;
         margin: 0; 
 
+        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+        opacity: 0;
+        transform: translateX(-50px);
+
         @include respond-to(small) {
             font-size: 50px;
             letter-spacing: 10px;
@@ -214,6 +233,11 @@
 
     &__info {
         margin-top: 50px;
+
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        opacity: 0;
+        transform: translateY(-100px);
+
     }
 
     &__position {
@@ -240,6 +264,11 @@
         padding: 15px;
         margin: 0 auto;
 
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        opacity: 0;
+        transform: translateY(-100px);
+
+
 
         @include respond-to(large) {
             width: 800px;
@@ -259,8 +288,11 @@
         font-family: var(--font-logo);
         letter-spacing: 5px;
         line-height: 1;
-        
         margin: 0; 
+
+        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+        opacity: 0;
+        transform: translateX(-50px);
 
         @include respond-to(medium) {
             font-size: 80px;
@@ -285,6 +317,10 @@
         position: relative;
         left: 0;
         transition: .3s ease;
+
+        display: inline-block;
+        opacity: 0;
+        transform: translateY(50px);
 
         & i {
             position: relative;
