--- a/src/assets/sass/pages/_contact.scss
+++ b/src/assets/sass/pages/_contact.scss
@@ -5,6 +5,9 @@
     background-size: cover;
     height: calc(80vh - 88px);
     width: 100%;
+
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    opacity: 0;;
 }
 
 .form {
@@ -23,6 +26,9 @@
     margin: 0 auto;
     padding: 20px;
     width: 90%;
+
+    transform: translateY(100px);
+    opacity: 0;;
 
     @include respond-to(medium) {
         width: 50%;
