--- a/src/assets/sass/pages/_project.scss
+++ b/src/assets/sass/pages/_project.scss
@@ -17,6 +17,11 @@
     @include respond-to(medium) {
         font-size: 24px;
     }
+
+    & h1 {
+        transform: translateX(-200px);
+        opacity: 0;
+    }
 }
 
 .my-project {
@@ -33,6 +38,10 @@
         flex: 0 0 100%;
         height: 330px;
         overflow-y: scroll;
+
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        transform: translateY(-50px);
+        opacity: 0;
 
         & img {
             display: block;
@@ -74,11 +83,21 @@
     &__title {
         font-family: var(--font-title);
         color: var(--color-fresh-watermelon);
+
+        clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+        transform: translateX(-50px);
+        opacity: 0;
+
     }
 
     &__desc {
         font-family: var(--font-primary);
         color: var(--color-almost-famous);
+
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        transform: translateY(-50px);
+        opacity: 0;
     }
     
 }
+
