--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -147,6 +147,27 @@ body.disable-scroll {
   margin-left: 5px;
 }
 
+.scroll-to-top {
+  color: var(--color-almost-famous);
+  font-size: 30px;
+  line-height: 1;
+  text-align: center;
+  position: fixed;
+  bottom: 55px;
+  right: 50px;
+  transition: 0.3s;
+  opacity: 0;
+}
+.scroll-to-top span {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 5px;
+}
+.scroll-to-top:hover {
+  color: var(--color-highlight);
+}
+
 .navbar {
   display: flex;
   flex-wrap: wrap;
@@ -825,7 +846,6 @@ textarea {
   flex: 0 80%;
   order: 2;
   position: relative;
-  transform: translateY(200px);
   opacity: 0;
 }
 .about-caption__img img {
@@ -835,18 +855,17 @@ textarea {
 @media screen and (min-width: 576px) {
   .about-caption__img {
     flex: 0 0 60%;
-    top: -200px;
   }
 }
 @media screen and (min-width: 768px) {
   .about-caption__img {
     flex: 0 0 40%;
-    top: -200px;
   }
 }
 @media screen and (min-width: 992px) {
   .about-caption__img {
     flex: 0 0 30%;
+    transform: translateY(200px);
   }
 }
 .about-caption__text {
